--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
     <title>Website</title>
   </head>
   <body>
-    <h1>Welcome to Our Website</h1>
+    <nav>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">About</a></li>
+    <li><a href="#">Contact</a></li>
+  </ul>
+  <h1>Welcome to Our Website</h1>
+</nav>
   </body>
 </html>
