--- a/index.html
+++ b/index.html
@@ -3,13 +3,6 @@
     <title>Website</title>
   </head>
   <body>
-    <nav>
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">About</a></li>
-    <li><a href="#">Contact</a></li>
-  </ul>
-  <h1>Welcome to Our Website</h1>
-</nav>
+  <h1>Welcome to Our Websitegit </h1>
   </body>
 </html>
