--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+
+
     <h1>Welcome to Our Website</h1>
+    <img src="hero-image.jpeg"/>
+    <h2>
+        Hero
+    </h2>
+    <p>Thsi is the heero section</p>
+
     <footer>
         <p>&copy; 2025 My Website</p>
     </footer>
