--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
         </ul>
     </nav>
     <h1>Welcome to Our Website</h1>
+    <h2>Testimonial 1</h2>
+    <p>
+        You made it so simple. My new site is so much faster and easier to work with than my old site.
+        I just choose the page, make the change and click save. Thanks, guys!
+    </p>
+    <h2>Testimonial 2</h2>
+    <p>
+        I've tried dozens of products, but this is truly the holy grail of dry shampoo.
+        It actually works without leaving a white residue!
+    </p>
     <footer>
         <p>&copy; 2025 My Website</p>
     </footer>
