Added contact form

--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
         </ul>
     </nav>
     <h1>Welcome to Our Website</h1>
+    <h2>Contact Form</h2>
+    <form>
+        <textarea>Name</textarea>
+        <input type="text">
+        <textarea>Email</textarea>
+        <input type="text">
+        <textarea>Message</textarea>
+        <input type="text">
+    </form>
     <footer>
         <p>&copy; 2025 My Website</p>
     </footer>
