Added Jasmine as hero

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </h2>
     <p>Thsi is the heero section</p>
 
+    <h2>Jasmine is a hero</h2>
     <h2>Contact Form</h2>
     <form>
         <textarea>Name</textarea>
