change text in testimonial

--- a/index.html
+++ b/index.html
@@ -15,34 +15,34 @@
 
     <h1>Welcome to Our Website</h1>
 
-    <img src="hero-image.jpeg" />
+    <img src="hero-image.jpeg" width="100" />
     <h2>
         Hero
     </h2>
-    <p>Thsi is the heero section</p>
+    <p>Thsi is the hero section</p>
 
     <h2>Contact Form</h2>
     <form>
-        <textarea>Name</textarea>
+        <text>Name</text>
         <input type="text">
-        <textarea>Email</textarea>
+        <text>Email</text>
         <input type="text">
-        <textarea>Message</textarea>
+        <text>Message</text>
         <input type="text">
     </form>
 
-    <h2>Testimonial 1</h2>
+    <h2>Testimonial One</h2>
     <p>
         You made it so simple. My new site is so much faster and easier to work with than my old site.
         I just choose the page, make the change and click save. Thanks, guys!
     </p>
-    <h2>Testimonial 2</h2>
+    <h2>Testimonial Two</h2>
     <p>
         I've tried dozens of products, but this is truly the holy grail of dry shampoo.
         It actually works without leaving a white residue!
     </p>
     <footer>
-        <p>&copy; 2025 My Website</p>
+        <p>&copy; 2026 My Website</p>
     </footer>
 </body>
 
