Added Cool Beans

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         I've tried dozens of products, but this is truly the holy grail of dry shampoo.
         It actually works without leaving a white residue!
     </p>
+    <h1> cool beans</h1>
     <footer>
         <p>&copy; 2026 My Website</p>
     </footer>
